[GH-1078]: fixed the alignment of ellipses after Loading to the middle

--- a/webapp/src/components/loading/loading.scss
+++ b/webapp/src/components/loading/loading.scss
@@ -1,3 +1,3 @@
-.loading-panel {
-    align-items: baseline !important;
+.loading-text {
+    margin: 20px 0;
 }
